# kube-whisper

./: .gitignore  1  README.md  pyproject.toml  runtime_time_table.jsonl
.github/workflows/: ci.yml
src/kubewhisper/: __init__.py  cli.py  test.py
src/kubewhisper/core/: assistant.py  audio.py  kubernetes.py  voice.py
src/kubewhisper/modules/: async_microphone.py  audio.py  audio_manager.py  config.py  event_handler.py  kubernetes_tools.py  logging.py  session_config.py  simple_assistant.py  tools.py  websocket_manager.py
src/kubewhisper/utils/: logger.py  utils.py
tests/: __init__.py  test_package.py
